--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/spring_test?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/spring_test?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=root
